# discovery

./: README.html  explore.html  index.html  print.html
01-background/: README.html
02-requirements/: README.html
03-setup/: README.html  linux.html  macos.html  verify.html  windows.html
04-blink/: README.html  build-it.html  debug-it.html  flash-it.html
04-blink/pg/src/: gpio.rs
05-digging-deeper/: Cargo.toml  README.html  bad-address.html  optimization.html  rtrm.html  spooky-action-at-a-distance.html  the-linker-script.html  type-safe-manipulation.html
05-digging-deeper/src/: main.rs
06-button-inputs/: Cargo.toml  README.html
06-button-inputs/pg/src/: lib.rs
appendix/1-general-troubleshooting/: README.html
src/: SUMMARY.md  explore.md
src/02-requirements/: README.md
src/04-blink/: Cargo.toml  README.md  build-it.md  debug-it.md  flash-it.md
src/04-blink/src/: main.rs
src/05-digging-deeper/: README.md  the-linker-script.md
src/05-led-roulette/pg/src/: lib.rs
src/05-led-roulette/src/: main.rs
src/06-button-inputs/: README.md
src/06-button-inputs/src/: main.rs
src/07-playback/pg/src/: lib.rs
src/08-leds-again/: Cargo.toml
src/08-leds-again/src/: main.rs
